--- a/index.html
+++ b/index.html
@@ -24,8 +24,17 @@
                 <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
             </ul>
         </nav>
+        <!-- Bouton hamburger pour mobile -->
+        <div class="hamburger" id="hamburger">
+            <i class="fa-solid fa-bars"></i>
+        </div>
     </header>
     <main>
+        <!-- Section présentation image -->
+        <!--section class="img-presentation">
+            <h1>Bienvenue chez Creativino</h1>
+            <img src="image/pizza-6478478_1920.jpg" alt="Pizza artisanale">
+        </section-->
         <section class="img-presentation">
             <div class="overlay"></div> <!-- Superposition noire -->
             <h1>Bienvenue chez Frais&Co</h1>
@@ -33,6 +42,27 @@
         </section>
         <section class="about">
             <div class="container">
+                <h2>À propos de Frais&Co</h2>
+                <p>Chez Frais&Co, Nous nous engageons à offrir à nos clients des produits frais et savoureux à des tarifs défiant toute concurrence. Chez Frais&Co, chaque achat est une garantie de satisfaction, grâce à une qualité constante et irréprochable. Venez découvrir notre large sélection de produits et profitez de nos offres exceptionnelles tout au long de l'année !</p>
+                <div class="features">
+                    <div class="feature">
+                        <i class="fa-solid fa-leaf"></i>
+                        <h3>Produits Frais et Locaux</h3>
+                        <p>Nous sélectionnons les meilleurs produits locaux pour garantir une fraîcheur incomparable dans chaque bouchée.</p>
+                    </div>
+                    <div class="feature">
+                        <i class="fa-solid fa-tags"></i>
+                        <h3>Prix Imbattables</h3>
+                        <p>Chez Frais&Co, vous bénéficiez des tarifs les plus compétitifs sans compromettre la qualité de nos produits.</p>
+                    </div>
+                    <div class="feature">
+                        <i class="fa-solid fa-star"></i>
+                        <h3>Qualité Constante</h3>
+                        <p>Notre engagement envers une qualité constante signifie que vous pouvez toujours compter sur nous pour des produits d'exception.</p>
+                    </div>
+                </div>                
+            </div>
+            <div class="container"></div>
                 <h2>À propos de Frais&Co</h2>
                 <p>Chez Frais&Co, Nous nous engageons à offrir à nos clients des produits frais et savoureux à des tarifs défiant toute concurrence. Chez Frais&Co, chaque achat est une garantie de satisfaction, grâce à une qualité constante et irréprochable. Venez découvrir notre large sélection de produits et profitez de nos offres exceptionnelles tout au long de l'année !</p>
                 <div class="features">
