--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         </div>
     </header>
     <main>
+        <!-- Section présentation image -->
         <!--section class="img-presentation">
             <h1>Bienvenue chez Creativino</h1>
             <img src="image/pizza-6478478_1920.jpg" alt="Pizza artisanale">
@@ -81,6 +82,103 @@
                         <p>Notre engagement envers une qualité constante signifie que vous pouvez toujours compter sur nous pour des produits d'exception.</p>
                     </div>
                 </div>                
+            </div>
+        </section>
+        <section class="elementor-section elementor-top-section elementor-element elementor-element-52a8cc30 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="52a8cc30" data-element_type="section" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
+            <div class="elementor-background-overlay"></div>
+            <div class="elementor-container elementor-column-gap-default">
+                <div class="elementor-column elementor-col-25 elementor-top-column elementor-element elementor-element-62150e11" data-id="62150e11" data-element_type="column">
+                    <div class="elementor-widget-wrap elementor-element-populated">
+                        <div class="elementor-element elementor-element-57ce905b elementor-widget elementor-widget-heading" data-id="57ce905b" data-element_type="widget" data-widget_type="heading.default">
+                            <div class="elementor-widget-container">
+                                <h2 class="elementor-heading-title elementor-size-default">Un savoir faire Propre</h2>		
+                            </div>
+                        </div>
+                        <div class="elementor-element elementor-element-5e449ed1 elementor-widget elementor-widget-text-editor" data-id="5e449ed1" data-element_type="widget" data-widget_type="text-editor.default">
+                            <div class="elementor-widget-container">
+                                <p>Supermarché Istanbul est le fruit de 35 ans d’expérience.</p>						
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="elementor-column elementor-col-25 elementor-top-column elementor-element elementor-element-1ef54aab" data-id="1ef54aab" data-element_type="column">
+                    <div class="elementor-widget-wrap elementor-element-populated">
+                        <section class="elementor-section elementor-inner-section elementor-element elementor-element-1460cdca elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="1460cdca" data-element_type="section">
+                            <div class="elementor-container elementor-column-gap-default">
+                                <div class="elementor-column elementor-col-100 elementor-inner-column elementor-element elementor-element-146c62a5" data-id="146c62a5" data-element_type="column" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
+                                    <div class="elementor-widget-wrap elementor-element-populated">
+                                        <div class="elementor-background-overlay"></div>
+                                        <div class="elementor-element elementor-element-670e82a2 elementor-widget elementor-widget-counter" data-id="670e82a2" data-element_type="widget" data-widget_type="counter.default">
+                                            <div class="elementor-widget-container">
+                                                <style>/*! elementor - v3.13.3 - 28-05-2023 */
+                                                    .elementor-counter .elementor-counter-number-wrapper{display:flex;font-size:69px;font-weight:600;line-height:1}.elementor-counter .elementor-counter-number-prefix,.elementor-counter .elementor-counter-number-suffix{flex-grow:1;white-space:pre-wrap}.elementor-counter .elementor-counter-number-prefix{text-align:right}.elementor-counter .elementor-counter-number-suffix{text-align:left}.elementor-counter .elementor-counter-title{text-align:center;font-size:19px;font-weight:400;line-height:2.5}
+                                                </style>		
+                                                <div class="elementor-counter">
+                                                    <div class="elementor-counter-number-wrapper">
+                                                        <span class="elementor-counter-number-prefix"></span>
+                                                        <span class="elementor-counter-number" data-duration="2000" data-to-value="250" data-from-value="0" data-delimiter=",">250</span>
+                                                        <span class="elementor-counter-number-suffix"></span>
+                                                    </div>
+                                                    <div class="elementor-counter-title">+ de 250 Salariés</div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
+                    </div>
+                </div>
+                <div class="elementor-column elementor-col-25 elementor-top-column elementor-element elementor-element-4a2acd0c" data-id="4a2acd0c" data-element_type="column">
+                    <div class="elementor-widget-wrap elementor-element-populated">
+                        <section class="elementor-section elementor-inner-section elementor-element elementor-element-23c9e4c1 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="23c9e4c1" data-element_type="section">
+                            <div class="elementor-container elementor-column-gap-default">
+                                <div class="elementor-column elementor-col-100 elementor-inner-column elementor-element elementor-element-a27dc4" data-id="a27dc4" data-element_type="column" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
+                                    <div class="elementor-widget-wrap elementor-element-populated">
+                                        <div class="elementor-background-overlay"></div>
+                                        <div class="elementor-element elementor-element-7c74dca7 elementor-widget elementor-widget-counter" data-id="7c74dca7" data-element_type="widget" data-widget_type="counter.default">
+                                            <div class="elementor-widget-container">
+                                                <div class="elementor-counter">
+                                                    <div class="elementor-counter-number-wrapper">
+                                                        <span class="elementor-counter-number-prefix"></span>
+                                                        <span class="elementor-counter-number" data-duration="2000" data-to-value="5000" data-from-value="0" data-delimiter=",">5,000</span>
+                                                        <span class="elementor-counter-number-suffix"></span>
+                                                    </div>
+                                                    <div class="elementor-counter-title">+ de 5000 références</div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
+                    </div>
+                </div>
+                <div class="elementor-column elementor-col-25 elementor-top-column elementor-element elementor-element-13dca432" data-id="13dca432" data-element_type="column">
+                    <div class="elementor-widget-wrap elementor-element-populated">
+                        <section class="elementor-section elementor-inner-section elementor-element elementor-element-63f77ae8 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="63f77ae8" data-element_type="section">
+                            <div class="elementor-container elementor-column-gap-default">
+                                <div class="elementor-column elementor-col-100 elementor-inner-column elementor-element elementor-element-27a73237" data-id="27a73237" data-element_type="column" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
+                                    <div class="elementor-widget-wrap elementor-element-populated">
+                                        <div class="elementor-background-overlay"></div>
+                                        <div class="elementor-element elementor-element-64f90bdb elementor-widget elementor-widget-counter" data-id="64f90bdb" data-element_type="widget" data-widget_type="counter.default">
+                                            <div class="elementor-widget-container">
+                                                <div class="elementor-counter">
+                                                    <div class="elementor-counter-number-wrapper">
+                                                        <span class="elementor-counter-number-prefix"></span>
+                                                        <span class="elementor-counter-number" data-duration="2000" data-to-value="50000" data-from-value="0" data-delimiter=",">50,000</span>
+                                                        <span class="elementor-counter-number-suffix"></span>
+                                                    </div>
+                                                    <div class="elementor-counter-title">+ de 50.000 clients chaque semaine</div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
